terminamos post con await

--- a/tarea.html
+++ b/tarea.html
@@ -12,16 +12,11 @@
 <body onload="load()">
     <header>
         <nav>
-            <ul>
-                <li id="cerrar">Otra Raza</li>
-                <li id="abrir">Random Gatuno</li>
-            </ul>
+            <a href="#cerrar" id="cerrar">Otra Raza</a>
+            <a href="#abrir" id="abrir">Random Gatuno</a>
         </nav>
     </header>
-    <section class="section-imagen">
-        <!-- <img src="" alt=""> -->
-        <!-- IMAGEN GATITO -->
-    </section>
+    <section class="section-imagen"></section>
     
 </body>
 </html>
