agrego random listo y .is-active

--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
     <title>ToDos</title>
     <script src="https://unpkg.com/axios/dist/axios.min.js" type="text/javascript"></script>
     <script src="script1.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="styles1.css">
 </head>
 <body onload="onload()">
     <ul id="todo-list"></ul>
