--- a/tarea.html
+++ b/tarea.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarea Clase 75</title>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"> 
     <link rel="stylesheet" href="styleTarea.css">
     <script src="scriptTarea.js" type="text/javascript"></script>
     <script src="https://unpkg.com/axios@0.20.0/dist/axios.min.js"></script>
@@ -16,7 +17,30 @@
             <a href="#abrir" id="abrir">Random Gatuno</a>
         </nav>
     </header>
-    <section class="section-imagen"></section>
-    
+    <main class="contenedor">
+        <section class="buscar">   
+            <form action="">
+                <input id="input-gatitos" type="text" placeholder="Ingrese su raza preferida"><button class="search" type="button"><i id="searc" class="fas fa-search"></i></button>     
+            </form>
+            <table>
+                <thead><!-- titulo tabla -->
+                    <th>NAME</th>
+                    <th>WEIGHT</th>
+                    <th>ORIGIN</th>
+                </thead>
+                <tbody >
+                     <tr id="data-gatitos"> <!-- filas -->
+                        <!-- <td id="id">1</td>
+                        <td id="name">Siames</td>
+                        <td id="webSite">www.hola.org</td> -->
+                    </tr>
+                </tbody>                
+            </table>  
+    </section>
+    <section class="section-imagen">
+        <figure >
+        </figure>
+    </section> 
+    </main>  
 </body>
 </html>
